fix: implement transactional outbox pattern and pessimistic locking